# tiny_MetaNN

./: CMakeLists.txt  readme.md
MetaNN/: CMakeLists.txt  meta_nn.h
MetaNN/data/: dynamic.h  scalar.h
MetaNN/data/batch/: array.h  batch.h  duplicate.h  matrix.h  scalar.h
MetaNN/data/facilities/: allocators.h  continuous_memory.h  lower_access.h  tags.h  traits.h
MetaNN/data/matrixs/: cpu_matrix.h  matrix.h  one_hot_vector.h  trival_matrix.h  zero_matrix.h
MetaNN/data_copy/: data_copy.h
MetaNN/evaluate/facilities/: eval_handle.h
MetaNN/facilities/: null_param.h  traits.h  var_type_dict.h
MetaNN/layers/compose/: compose_kernel.h
MetaNN/layers/cost/: negative_log_likelihood_layer.h
MetaNN/layers/elementary/: abs_layer.h  add_layer.h  bias_layer.h  element_mul_layer.h  interpolate_layer.h  sigmoid_layer.h  (+3 more)
MetaNN/operators/: abs.h  add.h  collapse.h  divide.h  dot.h  element_mul.h  interpolate.h  negative_log_likelihood.h  negative_log_likelihood_derivative.h  operators.h  sigmoid.h  sigmoid_derivative.h  sign.h  softmax.h  softmax_derivative.h  substract.h  tanh.h  tanh_derivative.h  transpose.h
MetaNN/policies/: CMakeLists.txt  change_policy.h  inject_policy.h  policy_container.h  policy_macro_begin.h  policy_macro_end.h  policy_operations.h  policy_selector.h
test/: CMakeLists.txt
test/data/: CMakeLists.txt  test_batch.cpp  test_general_matrix.cpp  test_matrix.cpp  test_scalar.cpp
test/facilities/: CMakeLists.txt  calculate_tags.h  test_var_type_dict.cpp
test/model_rel/: test_param_initializer.cpp
test/policies/: CMakeLists.txt  test_policy.cpp  test_policy_selector.cpp
(+17 files in other folders)
